[workspace.package]
license = "MIT-0"
authors = ["Parity Technologies <admin@parity.io>"]
homepage = "https://paritytech.github.io/polkadot-sdk/"
repository = "https://github.com/lao-sha/memopark.git"
edition = "2021"

[workspace]
members = [
    "node",
    "pallets/template",
    "pallets/forwarder",
    "pallets/identity",
    # 新 OTC 三件套：稍后创建
    "pallets/otc-maker",
    "pallets/otc-listing",
    "pallets/otc-order",
    "pallets/escrow",
    "pallets/arbitration",
    
    "pallets/memo-park",
    "pallets/memo-grave",
    "pallets/memo-hall",
    "pallets/ledger",
    "pallets/deceased",
    # 已迁移：删除旧 deceased-data
    "pallets/memo-offerings",
    "pallets/memo-referrals",
    "pallets/memo-affiliate",
    "pallets/evidence",
    "pallets/memo-endowment",
    "pallets/memo-ipfs",
    "pallets/memo-pet",
    "pallets/memo-bridge",
    "pallets/memo-sacrifice",
    "pallets/origin-restriction",
    "pallets/fee-guard",
    "pallets/pricing",
    "runtime",
]
resolver = "2"

[workspace.dependencies]
solochain-template-runtime = { package = "memopark-runtime", path = "./runtime", default-features = false }
pallet-template = { path = "./pallets/template", default-features = false }
enumflags2 = { version = "0.7", default-features = false }
log = { version = "0.4", default-features = false }
sp-keystore = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "f3969c7ddd34985e6e709ed458bcc519f651682a", default-features = false }
clap = { version = "4.5.13" }
frame-benchmarking-cli = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "f3969c7ddd34985e6e709ed458bcc519f651682a", default-features = false }
frame-metadata-hash-extension = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "f3969c7ddd34985e6e709ed458bcc519f651682a", default-features = false }
docify = { version = "0.2.9", default-features = false }
impl-trait-for-tuples = { version = "0.2.2", default-features = false }
serde = { version = "1", default-features = false }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "f3969c7ddd34985e6e709ed458bcc519f651682a", default-features = false }
futures = { version = "0.3.31" }
jsonrpsee = { version = "0.24.3" }
pallet-transaction-payment = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "f3969c7ddd34985e6e709ed458bcc519f651682a", default-features = false }
pallet-utility = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "f3969c7ddd34985e6e709ed458bcc519f651682a", default-features = false }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "f3969c7ddd34985e6e709ed458bcc519f651682a", default-features = false }
sc-basic-authorship = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "f3969c7ddd34985e6e709ed458bcc519f651682a", default-features = false }
sc-cli = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "f3969c7ddd34985e6e709ed458bcc519f651682a", default-features = false }
sc-client-api = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "f3969c7ddd34985e6e709ed458bcc519f651682a", default-features = false }
sc-consensus = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "f3969c7ddd34985e6e709ed458bcc519f651682a", default-features = false }
sc-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "f3969c7ddd34985e6e709ed458bcc519f651682a", default-features = false }
sc-consensus-grandpa = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "f3969c7ddd34985e6e709ed458bcc519f651682a", default-features = false }
sc-executor = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "f3969c7ddd34985e6e709ed458bcc519f651682a", default-features = false }
sc-network = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "f3969c7ddd34985e6e709ed458bcc519f651682a", default-features = false }
sc-offchain = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "f3969c7ddd34985e6e709ed458bcc519f651682a", default-features = false }
sc-service = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "f3969c7ddd34985e6e709ed458bcc519f651682a", default-features = false }
sc-telemetry = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "f3969c7ddd34985e6e709ed458bcc519f651682a", default-features = false }
sc-transaction-pool = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "f3969c7ddd34985e6e709ed458bcc519f651682a", default-features = false }
sc-transaction-pool-api = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "f3969c7ddd34985e6e709ed458bcc519f651682a", default-features = false }
sp-api = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "f3969c7ddd34985e6e709ed458bcc519f651682a", default-features = false }
sp-block-builder = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "f3969c7ddd34985e6e709ed458bcc519f651682a", default-features = false }
sp-blockchain = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "f3969c7ddd34985e6e709ed458bcc519f651682a", default-features = false }
sp-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "f3969c7ddd34985e6e709ed458bcc519f651682a", default-features = false }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "f3969c7ddd34985e6e709ed458bcc519f651682a", default-features = false }
sp-genesis-builder = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "f3969c7ddd34985e6e709ed458bcc519f651682a", default-features = false }
sp-inherents = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "f3969c7ddd34985e6e709ed458bcc519f651682a", default-features = false }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "f3969c7ddd34985e6e709ed458bcc519f651682a", default-features = false }
sp-keyring = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "f3969c7ddd34985e6e709ed458bcc519f651682a", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "f3969c7ddd34985e6e709ed458bcc519f651682a", default-features = false }
sp-arithmetic = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "f3969c7ddd34985e6e709ed458bcc519f651682a", default-features = false }
sp-timestamp = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "f3969c7ddd34985e6e709ed458bcc519f651682a", default-features = false }
sp-std = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "f3969c7ddd34985e6e709ed458bcc519f651682a", default-features = false }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "f3969c7ddd34985e6e709ed458bcc519f651682a", default-features = false }
substrate-build-script-utils = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "f3969c7ddd34985e6e709ed458bcc519f651682a", default-features = false }
codec = { version = "3.7.4", default-features = false, package = "parity-scale-codec" }
const_format = { version = "0.2.32", default-features = false }
frame-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "f3969c7ddd34985e6e709ed458bcc519f651682a", default-features = false }
frame-executive = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "f3969c7ddd34985e6e709ed458bcc519f651682a", default-features = false }
frame-support = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "f3969c7ddd34985e6e709ed458bcc519f651682a", default-features = false }
frame-system-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "f3969c7ddd34985e6e709ed458bcc519f651682a", default-features = false }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "f3969c7ddd34985e6e709ed458bcc519f651682a", default-features = false }
frame-try-runtime = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "f3969c7ddd34985e6e709ed458bcc519f651682a", default-features = false }
pallet-aura = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "f3969c7ddd34985e6e709ed458bcc519f651682a", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "f3969c7ddd34985e6e709ed458bcc519f651682a", default-features = false }
pallet-grandpa = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "f3969c7ddd34985e6e709ed458bcc519f651682a", default-features = false }
pallet-sudo = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "f3969c7ddd34985e6e709ed458bcc519f651682a", default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "f3969c7ddd34985e6e709ed458bcc519f651682a", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "f3969c7ddd34985e6e709ed458bcc519f651682a", default-features = false }
scale-info = { version = "2.11.6", default-features = false }
serde_json = { version = "1.0.132", default-features = false }
sp-consensus-grandpa = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "f3969c7ddd34985e6e709ed458bcc519f651682a", default-features = false }
sp-offchain = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "f3969c7ddd34985e6e709ed458bcc519f651682a", default-features = false }
sp-session = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "f3969c7ddd34985e6e709ed458bcc519f651682a", default-features = false }
sp-storage = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "f3969c7ddd34985e6e709ed458bcc519f651682a", default-features = false }
sp-transaction-pool = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "f3969c7ddd34985e6e709ed458bcc519f651682a", default-features = false }
sp-version = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "f3969c7ddd34985e6e709ed458bcc519f651682a", default-features = false }
substrate-wasm-builder = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "f3969c7ddd34985e6e709ed458bcc519f651682a", default-features = false }
sp-application-crypto = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "f3969c7ddd34985e6e709ed458bcc519f651682a", default-features = false }

[workspace.lints.rust]
unsafe_code = "forbid"
warnings = "deny"

[workspace.lints.clippy]
all = "deny"

[profile.release]
opt-level = 3
panic = "unwind"

[profile.production]
codegen-units = 1
inherits = "release"
lto = true


