[package]
name = "stardust-media-common"
version = "0.1.0"
edition = "2021"
authors = ["Stardust Team"]
description = "Common media processing utilities for Stardust blockchain"
license = "MIT"

[dependencies]
# Substrate primitives
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.0.0", default-features = false, features = ["derive"] }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2506", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2506", default-features = false }
sp-std = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2506", default-features = false }

# Frame support (用于BoundedVec等类型)
frame-support = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2506", default-features = false }

# Hex编码(可选)
hex = { version = "0.4", default-features = false, features = ["alloc"], optional = true }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-std/std",
    "frame-support/std",
]

[dev-dependencies]
# 测试依赖可以后续添加
