[package]
name = "pallet-affiliate-instant"
version = "0.1.0"
authors = ["Memopark Team"]
edition = "2021"
license = "Apache-2.0"
description = "即时分成系统：供奉支付后立即按层级分配推荐奖励"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0", optional = true }

# Substrate
frame-support = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.18.9", default-features = false }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.18.9", default-features = false }
frame-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.18.9", default-features = false, optional = true }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.18.9", default-features = false }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.18.9", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.18.9", default-features = false }
sp-std = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.18.9", default-features = false }

# Local pallets
pallet-affiliate-config = { path = "../affiliate-config", default-features = false }

[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.18.9" }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.18.9" }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.18.9" }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"serde",
	"frame-support/std",
	"frame-system/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"pallet-affiliate-config/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
]

